# scribe

./: .gitignore  .madgerc  .npmrc  .prettierignore  AGENTS.md  README.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
.github/workflows/: audit.yml  ci.yml
.husky/: post-checkout  pre-commit
e2e/: AGENTS.md  app-boot.spec.ts  auth-screen.spec.ts  book-whiteboard.spec.ts  collections.spec.ts  create-book.spec.ts  datagrid.spec.ts  editor-typing.spec.ts  fixtures.ts  link-popover.spec.ts  outline-title.spec.ts  sidebar-tree.spec.ts  spellcheck.spec.ts  tsconfig.json  whiteboard.spec.ts
scripts/: git-worktree-add.sh  migrate-color-tokens.ts  sync-worktree-env.sh
src/: App.tsx  app.tsx  css-custom-properties.d.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: AGENTS.md  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AppShell.tsx  AuthScreen.tsx  BookPlaceholder.tsx  MainEmptyState.tsx  Sidebar.tsx  app-shell.tsx  auth-screen.test.tsx  auth-screen.tsx  leaf-delete-copy.test.ts  leaf-delete-copy.ts  main-empty-state.test.tsx  main-empty-state.tsx  main-pane.test.tsx  main-pane.tsx  scribe-logo.test.tsx  scribe-logo.tsx  sidebar.tsx  use-greeting.test.ts  use-greeting.ts
src/data/: AGENTS.md  book-outline-tree.test.ts  book-outline-tree.ts  books.test.ts  books.ts  collection-view.test.ts  collection-view.ts  crud.ts  (+48 more)
supabase/: config.toml
(+503 files in other folders)
