[package]
name = "app"
version = "0.1.0"
description = "A minimalist, zen desktop writing app."
authors = ["Marissa Villanueva"]
license = "LicenseRef-Proprietary"
repository = "https://github.com/mvilla-circuit/scribe"
edition = "2021"
rust-version = "1.77.2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Forbid silent panics in the shell: a bare `.unwrap()`/`.expect()` aborts the
# whole desktop app with an opaque message. Surface the underlying error and
# exit (or propagate) instead. `rust:lint` runs clippy with `-D warnings`, so
# these fail CI. Add a scoped `#[allow(...)]` with a reason for the rare
# genuinely-unrecoverable setup path.
[lints.clippy]
expect_used = "warn"
unwrap_used = "warn"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-oauth = "2"
tauri-plugin-http = "2"
